--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/animeShop
+MONGODB_URI=mongodb+srv://qydffarro:TofuEats1@cluster0.q1owwie.mongodb.net/animeShop
 NODE_ENV=development
