--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://qydffarro:TofuEats1@cluster0.q1owwie.mongodb.net/animeShop
 NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=detfojg2s
+CLOUDINARY_API_KEY=793285674358622
+CLOUDINARY_API_SECRET=gQq0LctLmpM7CLDTYEuieiXtP0Y
