--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "anime-you",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
